# neptune-lang

./: .gitattributes  404.html  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  build-clang.py  build-g++.py  build-lto.py  build.rs  class_object.html  documentation.html  embed.html  file  fun_module.html  index.html  internals.html  perf.data  perf.data.old  print.html  searchindex.json  syntax.html  tasks_channels.html  test.lua  types.html  var_eq.html
bench/: ack.js  ack.lua  ack.np  ack.rb  bench.py  btree.js  btree.lua  btree.np  btree.py  btree.rb  btree.wren  collatz.js  collatz.lua  collatz.np  collatz.rb  fib.js  fib.lua  fib.np  fib.rb  nbody.js  nbody.lua  nbody.np  nbody.rb  nested.js  nested.lua  nested.np  nested.rb  selection-sort.js  selection-sort.lua  selection-sort.np  selection-sort.rb  sieve.js  sieve.lua  sieve.np  sieve.rb  spect.js  spect.lua  spect.np  spect.rb
documentation/: array.html  channel.html  prelude.html  random.html  string.html
neptune-book/: book.toml
neptune-cli/: Cargo.toml  file  perf.data  perf.data.old
neptune-cli/src/: main.rs  prelude.np  repl.np  time.np
neptune-cli/test/: test_import1.np  test_import2.np  test_sleep.np
neptune-vm/: checked_arithmetic.cc  extrawide_handlers.h  function.cc  function.h  gc.cc  gc.h  handle.h  handlers.h  hash_table.h  native_builtins.cc  native_function.cc  native_function.h  neptune-vm.cc  neptune-vm.h  object.cc  object.h  op.h  util.cc  util.h  value.cc  value.h  vm.cc  vm.h  wide_handlers.h
src/: bytecode.rs  bytecode_compiler.rs  bytecode_writer.rs  compiler.rs  gc.rs  lib.rs  main.rs  objects.rs  ops.rs  parser.rs  prelude.np  scanner.rs  util.rs  value.rs  vm.rs
tests/: assert.np  assert_eq.json  assert_eq.np  assert_eq2.json  assert_eq2.np  assert_eq3.json  assert_eq3.np  assert_failed.json  assert_failed.np  assert_failed2.json  assert_failed2.np  assert_failed3.json  assert_failed3.np  assert_failed4.json  assert_failed4.np  errors.json  test.np  test2.np  test_at.json  test_break_continue_outside_loop.json  test_break_continue_outside_loop.np  test_compiletime_overflow.json  test_concat_int.json  test_concat_int.np  test_deadlock.np  test_deadlock_post.np  test_efunc.np  test_equal_as_expr.json  test_equal_as_expr.np  test_hash.json  test_invalid_array.json  test_invalid_block.json  test_invalid_call.json  test_invalid_call.np  test_invalid_character.json  test_invalid_class1.json  test_invalid_class2.json  test_invalid_class2.np  test_invalid_class3.json  test_invalid_class3.np  (+103 more)
(+172 files in other folders)
