[package]
edition = "2018"
name = "neptune-lang"
version = "0.1.0"

[dependencies]
cxx = "1.0.50"
num_enum = "0.5"
parse_int = "0.5.0"
phf = { version = "0.10", features = ["macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
unicode-segmentation = "1.8"

[build-dependencies]
cxx-build = "1.0.50"
