[package]
edition = "2018"
name = "neptune-lang"
version = "0.1.0"

[dependencies]
cxx = "1.0.64"
futures = "0.3.21"
num_enum = "0.5.6"
parse_int = "0.6.0"
phf = { version = "0.10.1", features = ["macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
unicode-segmentation = "1.8.0"

[build-dependencies]
cxx-build = "1.0.64"

[features]
default = ["mimalloc"]
mimalloc = []