[package]
edition = "2018"
name = "neptune-lang"
version = "0.1.0"
license = "MIT"
authors = ["Srinivasa Mahesh <m.srinivasa1234@gmail.com>","Srikanth Mahesh <srikanth.mahesh1234@gmail.com>"]
description = "An embeddable scripting language"
readme = "README.md"
repository = "https://github.com/Srinivasa314/neptune-lang"

[dependencies]
cxx = "1.0.66"
futures = "0.3.21"
num_enum = "0.5.7"
parse_int = "0.6.0"
phf = { version = "0.10.1", features = ["macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
unicode-segmentation = "1.9.0"

[build-dependencies]
cxx-build = "1.0.66"

[features]
default = ["mimalloc"]
mimalloc = []
